# pydantic-agent-on-tencentcloud

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: multica-dispatch.yml
app/: __init__.py  agent.py  logging_config.py  main.py
app/integrations/: __init__.py  config.py  memory.py  sandbox.py
docs/designs/: BUB-12-merge-auto-done-verification.md  BUB-13-pydantic-ai-agent-on-tencentcloud.md  BUB-18-zhipu-deepseek-provider-integration.md  BUB-23-dotenv-config-support.md  BUB-25-tencentcloud-ai-integration.md  BUB-6-multica-agent-workflow-integration.md  BUB-9-multica-workflow-verification.md  MUL-BUB-10-multica-workflow-verification.md
docs/plans/: BUB-14-pydantic-ai-agent-on-tencentcloud.md  BUB-19-zhipu-deepseek-provider-integration.md  BUB-24-dotenv-config-support.md  BUB-26-tencentcloud-ai-integration.md  MUL-BUB-11-multica-workflow-verification.md
infra/: .terraform.lock.hcl  main.tf  output.tf  terraform.tfvars.example  variables.tf
scripts/: deploy_app.sh  deploy_app.sh.tftpl  provision_sandbox_tool.sh
tests/: test_agent.py  test_integrations.py  test_logging.py
